# spirit-phantom

./: .gitattributes  LICENSE  README.md  mkdocs.yaml  mypy.ini  pyproject.toml  ruff.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: dependency-vulnerability-check.yml  test.yml
docs/: index.md  module.md
src/: run.py
src/spirit_phantom/: __init__.py  cli.py  test_atlas_resources.py
src/spirit_phantom/core/: initial_transform.py  multi_echo_thermometry.py  parameters_Affine.txt  parameters_Rigid.txt  parameters_UnitTest.txt  registration.py  registration_optimizations.py  registration_parameters_Rigid.txt  slice_thickness.py  test_initial_transform.py  test_multi_echo_thermometry.py  test_override_registration.py  test_registration.py  test_slice_thickness.py  test_transform.py  test_vials.py  transform.py  vials.py
src/spirit_phantom/core/configuration/: parameters_Affine.txt  parameters_B_Spline.txt  parameters_Rigid.txt  spirit-labels-itksnap.txt  vial-configurations.json
src/spirit_phantom/io/: __init__.py  atlas_transfer.py  fiducial_evaluation.py  point_transforms.py  points.py  segmentations.py  test_atlas_transfer.py  test_fiducial_evaluation.py  test_point_transform.py  test_points.py  test_segmentations.py
src/spirit_phantom/utils/: binary_morphology.py  digital_phantom.py  test_binary_morphology.py  test_visualisation.py  visualisation.py
